added react components/redux
