# app/Http/Controllers/RegulationsController.php
@@ -15,6 +15,47 @@ class RegulationsController extends Controller
     /**
      * Display a listing of the resource.
      */
+    /**
+ * @OA\Get(
+ *      path="/api/regulations",
+ *      operationId="getRegulationsList",
+ *      tags={"Regulations"},
+ *      summary="Get list of regulations",
+ *      description="Returns list of regulations",
+ *      @OA\Parameter(
+ *          name="name[eq]",
+ *          in="query",
+ *          description="Name of the regulation (equal to the specified value)",
+ *          required=false,
+ *          @OA\Schema(type="string")
+ *      ),
+ *      @OA\Parameter(
+ *          name="description[eq]",
+ *          in="query",
+ *          description="Description of regulation (equal to the specified value)",
+ *          required=false,
+ *          @OA\Schema(type="string")
+ *      ),
+ *      @OA\Parameter(
+ *          name="gender[eq]",
+ *          in="query",
+ *          description="Gender of regulation (equal to the specified value)",
+ *          required=false,
+ *          @OA\Schema(type="string")
+ *      ),
+ *      @OA\Parameter(
+ *          name="minimal_requirements[eq]",
+ *          in="query",
+ *          description="Minimal requirements for regulation (equal to the specified value)",
+ *          required=false,
+ *          @OA\Schema(type="string")
+ *      ),
+ *      @OA\Response(
+ *          response=200,
+ *          description="Successful operation",
+ *      )
+ * )
+ */
     public function index(Request $request)
     {
         $filter = new RegulationsFilter();
@@ -39,6 +80,39 @@ class RegulationsController extends Controller
     /**
      * Store a newly created resource in storage.
      */
+       /**
+ * @OA\Post(
+ *     path="/api/regulations",
+ *     summary="Adds a new regulation",
+ *    tags={"Regulations"},
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(ref="#/components/schemas/Regulations")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="OK",
+ *         @OA\JsonContent(
+ *                 @OA\Schema(ref="#/components/schemas/Regulations"),
+ *             @OA\Examples(example="regulation", value={
+ * "data": {
+*"id":1,
+*"name":"et",
+*"description":"Qui corporis dolores harum rerum a sunt.",
+*"minimalRequirements":"alias",
+*"gender":"male",
+ * }
+*}, summary="A regulation object."),
+ *         )
+ *     ),
+ *      @OA\Response(
+ *         response=422,
+ *         description="Unprocessable request (validation failed)",
+ *     )
+ * )
+ */
     public function store(StoreRegulationsRequest $request)
     {
         $regulation = Regulations::create($request->validated());
@@ -49,6 +123,44 @@ class RegulationsController extends Controller
     /**
      * Display the specified resource.
      */
+    /**
+ * @OA\Get(
+ *      path="/api/regulations/{id}",
+ *      operationId="getRegulation",
+ *      tags={"Regulations"},
+ *      summary="Get regulation by id",
+ *      description="Returns one regulation record by id if it is found",
+ *      @OA\Parameter(
+ *         description="Id of regulation",
+ *         in="path",
+ *         name="id",
+ *         required=true,
+ *         @OA\Schema(type="string"),
+ *         @OA\Examples(example="int", value="1", summary="An int value."),
+ *     ),
+ *      @OA\Response(
+ *          response=200,
+ *          description="Successful operation",
+  *         @OA\JsonContent(
+ *                 @OA\Schema(ref="#/components/schemas/Regulations"),
+ *             @OA\Examples(example="regulation", value={
+                    * "data": {
+*"id":1,
+*"name":"et",
+*"description":"Qui corporis dolores harum rerum a sunt.",
+*"minimalRequirements":"alias",
+*"gender":"male",
+                    * }
+                    *}, summary="A regulation object."),
+ *         ) 
+ *      ),
+ *      @OA\Response(
+ *          response=404,
+ *          description="Record not found",
+ *          
+ *      )
+ * )
+ */
     public function show(Regulations $regulation)
     {
         // $regulation= Regulations::findOrFail($regulation);
@@ -67,9 +179,50 @@ class RegulationsController extends Controller
     /**
      * Update the specified resource in storage.
      */
+     /**
+ * @OA\Put(
+ *     path="/api/regulations/{id}",
+ *     summary="Updates a regulation",
+ *      tags={"Regulations"},
+ * 
+ *     @OA\Parameter(
+ *         description="Id of regulation to update",
+ *         in="path",
+ *         name="id",
+ *         required=true,
+ *         @OA\Schema(type="string"),
+ *         @OA\Examples(example="int", value="1", summary="An int value."),
+ *     ),
+ *     @OA\RequestBody(
+ *         @OA\MediaType(
+ *             mediaType="application/json",
+ *             @OA\Schema(ref="#/components/schemas/Regulations")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="OK",
+ *          @OA\JsonContent(
+ *                 @OA\Schema(ref="#/components/schemas/Regulations"),
+ *             @OA\Examples(example="regulation", value={
+                    * "data": {
+*"id":1,
+*"name":"et",
+*"description":"Qui corporis dolores harum rerum a sunt.",
+*"minimalRequirements":"alias",
+*"gender":"male",
+                    * }
+                    *}, summary="A regulation object."),
+ *         ),
+        *     ),
+        *     @OA\Response(
+        *         response=404,
+        *         description="Regulation not found by id"
+        *     )
+ * )
+ */
     public function update(UpdateRegulationsRequest $request, Regulations $regulation)
     {
-        // $regulation = Regulations::findOrFail($regulation);
         $regulation->update($request->validated());
             return new RegulationResource($regulation);
     }
@@ -77,9 +230,32 @@ class RegulationsController extends Controller
     /**
      * Remove the specified resource from storage.
      */
+    /** 
+    * @OA\Delete(
+        *     path="/api/regulations/{id}",
+        *     summary="Deletes a regulation",
+        *      tags={"Regulations"},
+        * 
+        *     @OA\Parameter(
+        *         description="Id of regulation to delete",
+        *         in="path",
+        *         name="id",
+        *         required=true,
+        *         @OA\Schema(type="string"),
+        *         @OA\Examples(example="int", value="1", summary="An int value."),
+        *     ),
+        *     @OA\Response(
+        *         response=200,
+        *         description="Regulation successfully deleted"
+        *     ),
+        *     @OA\Response(
+        *         response=404,
+        *         description="Regulation not found by id"
+        *     )
+        * )
+        */
     public function destroy(Regulations $regulation)
     {
-        // $regulation = Regulations::findOrFail($regulation);
         $regulation->delete();
         return response()->json(['message'=>'deleted'],200);
     }
